fix: får app som åpnes